src/test/ui/borrowck/two-phase-across-loop.stderr
error[E0499]: cannot borrow `foo` as mutable more than once at a time
  --> $DIR/two-phase-across-loop.rs:17:22
   |
LL |         strings.push(foo.get_string());
   |                      ^^^ `foo` was mutably borrowed here in the previous iteration of the loop

error: aborting due to previous error

For more information about this error, try `rustc --explain E0499`.
